# face_filter_app

./: CMakeLists.txt
include/: faceDetector.h
src/: 3dLoader.cpp  faceDetector.cpp  main.cpp
